--- a/study-company-service.yml
+++ b/study-company-service.yml
@@ -3,7 +3,7 @@ server:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: study-eureka-server
     port: 9091
   client:
     registerWithEureka: true
@@ -16,10 +16,10 @@ eureka:
 spring:
     datasource:
         driver-class-name: com.mysql.jdbc.Driver
-        password: '123456'
+#        password: '123456'
         platform: mysql
-        url: jdbc:mysql://localhost/poc_database?verifyServerCertificate=false&useSSL=false&requireSSL=false
-        username: study_user
+        url: jdbc:mysql://mysql-read/test?verifyServerCertificate=false&useSSL=false&requireSSL=false
+        username: root
     jpa:
         database-platform: org.hibernate.dialect.MySQLDialect
         generate-ddl: false
