--- a/study-company-service.yml
+++ b/study-company-service.yml
@@ -18,7 +18,7 @@ spring:
         driver-class-name: com.mysql.jdbc.Driver
 #        password: '123456'
         platform: mysql
-        url: jdbc:mysql://mysql-read/test?verifyServerCertificate=false&useSSL=false&requireSSL=false
+        url: jdbc:mysql://mysql-read:3306/test?verifyServerCertificate=false&useSSL=false&requireSSL=false
         username: root
     jpa:
         database-platform: org.hibernate.dialect.MySQLDialect
