--- a/study-eureka-server.yml
+++ b/study-eureka-server.yml
@@ -3,7 +3,7 @@ server:
 
 eureka:
   instance:
-    hostname: study-eureka-server
+    hostname: localhost
   client:
     registerWithEureka: true
     fetchRegistry: false
